# Cache_friendly_memory_allocator

adaptive/: adaptive.h  bench_adaptive.c  hotcold.c  hotcold.h
clustering/: bench_dynamic_pool  bench_dynamic_pool.c  dynamic_pool.c
clustering/arrayTree/: Makefile  array_tree.c  array_tree.h  bench_array_tree.c
clustering/dynamic/: bench_dynamic_pool  bench_dynamic_pool.c  dynamic_pool.c  dynamic_pool.h
clustering/static/: Makefile  bench_clustering  bench_clustering.c  node_pool.c  node_pool.h
cpu_slab/hot_cold_slab_allocator/: bench_hot_cold_slab.c  hot_cold_slab.h  results.txt
cpu_slab/multi_slab/: bench_multi_slab.c
cpu_slab/thread_multi_slab/: bench_thread_slab.c  results.txt  thread_slab.h
custom_allocator_project/headers/: slab_allocator.hpp
custom_allocator_project/tests/: benchmark_tests.cpp  unit_tests.cpp
experiment1/: cacheFriendly  false_sharing.cpp
experiment_hot_cold/: asymmetric_aligned  cachegrind.out.7399  cachegrind.out.7454  symmetric
experiments/experiment1/: false_sharing
experiments/experiment_hot_cold/: asymmetric  asymmetric.cpp  asymmetric_aligned.cpp  cachegrind.out.7407  cachegrind.out.7426  cachegrind.out.7442  cachegrind.out.7461  hot_cold.cpp  symmetric.cpp  symmetric_aligned  symmetric_aligned.cpp
hotAndCold/: bench_hotcold  bench_hotcold.c  hotcold.c
identify_hots_array/: array_profiler.c  array_profiler.h
simple_allocator/: CMakeLists.txt  Makefile
simple_allocator/headers/: allocator.hpp
simple_allocator/sources/: allocator.cpp
slab_allocator_advanced1/: bench_runner  test_runner
(+113 files in other folders)
